<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloPais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="128dp"
        app:flow_verticalAlign="center"
        android:text="@string/franca"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/imgFranca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFranca"
        android:layout_width="56dp"
        android:layout_height="32dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="3dp"
        android:importantForAccessibility="no"
        android:visibility="visible"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@id/tituloPais"
        app:layout_constraintEnd_toStartOf="@+id/tituloPais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tituloPais"
        app:srcCompat="@drawable/franca"
        tools:srcCompat="@drawable/franca"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imgEmblema"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_marginBottom="240dp"
        android:importantForAccessibility="no"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/emblema"
        tools:srcCompat="@drawable/emblema"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnEscalacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/escalacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgEmblema"
        app:layout_constraintBottom_toTopOf="@id/cardJogo1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardJogo1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/cardJogo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEscalacao">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgFrancaJogo1"
                android:layout_width="56dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:padding="4dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/franca1"
                tools:srcCompat="@drawable/franca1"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imgAustralia"
                android:layout_width="56dp"
                android:layout_height="80dp"
                android:layout_marginEnd="32dp"
                android:padding="4dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/australia"
                tools:srcCompat="@drawable/australia"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/dtJogo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/jogo1"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/placarJogo1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/placarJogo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placar_jogo1"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dtJogo1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardJogo2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardJogo1"
        app:layout_constraintBottom_toTopOf="@id/cardJogo3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgFrancaJogo2"
                android:layout_width="56dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:padding="4dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/franca2"
                tools:srcCompat="@drawable/franca2"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imgDinamarca"
                android:layout_width="56dp"
                android:layout_height="80dp"
                android:layout_marginEnd="32dp"
                android:padding="4dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dinamarca"
                tools:srcCompat="@drawable/dinamarca"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/dtJogo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/jogo2"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/placarJogo2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/placarJogo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placar_jogo2"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dtJogo2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardJogo3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cardJogo2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTunisia"
                android:layout_width="56dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:padding="4dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/tunisia"
                tools:srcCompat="@drawable/tunisia"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/imgFrancaJogo3"
                android:layout_width="56dp"
                android:layout_height="80dp"
                android:layout_marginEnd="32dp"
                android:padding="4dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/franca3"
                tools:srcCompat="@drawable/franca3"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/dtJogo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/jogo3"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/placarJogo3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/placarJogo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placar_jogo3"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dtJogo3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>